--- a/doctorskin-web/DoctorSkin/Areas/Admin/Views/Shared/AdminLayout.cshtml
+++ b/doctorskin-web/DoctorSkin/Areas/Admin/Views/Shared/AdminLayout.cshtml
@@ -74,7 +74,7 @@
         <div class="sidebar">
             <div class="logo-details mx-auto justify-content-center">
                 <a href="/admin" class="logo_name">
-                    <img style="width: 100%;" src="https://o2skin-media.hn.ss.bfcplatform.vn/wp-content/uploads/2022/01/e93PVUu4-logo-o2skin.png">
+                    <img style="width: 100%;" src="https://o2skin.vn/wp-content/uploads/2024/05/logo-o2skin.png">
                 </a>
             </div>
             <ul class="nav-links">
