--- a/doctorskin-web/DoctorSkin/Views/Users/Create.cshtml
+++ b/doctorskin-web/DoctorSkin/Views/Users/Create.cshtml
@@ -33,7 +33,7 @@
 
 <body>
     <div>
-        <img class="logoImg" src="https://o2skin-media.hn.ss.bfcplatform.vn/wp-content/uploads/2022/01/e93PVUu4-logo-o2skin.png"
+        <img class="logoImg" src="https://o2skin.vn/wp-content/uploads/2024/05/logo-o2skin.png"
              style="width:100%;object-fit:cover">
     </div>
     <div class="container" id="container">
