--- a/doctorskin-web/DoctorSkin/Views/Shared/_Layout.cshtml
+++ b/doctorskin-web/DoctorSkin/Views/Shared/_Layout.cshtml
@@ -127,7 +127,7 @@
                             <div class="aa-logo">
                                 <!-- Text based logo -->
                                 <a href="/">
-                                    <img src="https://o2skin-media.hn.ss.bfcplatform.vn/wp-content/uploads/2022/01/e93PVUu4-logo-o2skin.png" alt="">
+                                    <img src="https://o2skin.vn/wp-content/uploads/2024/05/logo-o2skin.png" alt="">
                                 </a>
                                 <!-- img based logo -->
                                 <!-- <a href="index.html"><img src="img/logo.jpg" alt="logo img"></a> -->
